Fix heading overflow into product table by adjusting padding

--- a/frontend/src/app/track-result/track-result.component.scss
+++ b/frontend/src/app/track-result/track-result.component.scss
@@ -19,10 +19,13 @@ mat-card {
 
 .heading {
   background: rgba(0, 0, 0, 0.2);
-  height: 35px;
   justify-content: center;
-  padding: 0 $space-ml;
+  padding: $space-s $space-ml;
   width: 90%;
+
+  h2 {
+    margin: 0;
+  }
 }
 
 .product-name {
